syntax = "proto3";

package order;

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
}

message CreateOrderRequest {
  int32 user_id = 1;
}

message CreateOrderResponse {
  int32 order_id = 1;
  string message = 2;
}

message OrderItem {
  int32 product_id = 1;
  int32 quantity = 2;
}
